--- a/index.html
+++ b/index.html
@@ -25,118 +25,51 @@
     <div id="column1">
 
       <div id="texttest">
-        A long time between suns I held the stale overcoat.
-      </div>
-      <div id="texttest">
-        Sliding between light and shadow.
-      </div>
-      <div id="texttest">
-        Cross wounded galaxies we intersect, poison of the dead sun in your brain slowly fading.
-      </div>
-      <div id="texttest">
-        Migrants of ape in the gasoline crack of history.
+        {Satellites}<br>
+        - Drawing<br>
+        - Writing<br>
+        - Collage<br>
+        - Printing<br>
+        - Technology<br>
+        - Manquette
       </div>
 
-      <br>
       <div id="texttest">
-        -
-      </div>
-      <br>
-
-      <div id="texttest">
-        Rusted car carcasses, fallen giants.
-      </div>
-      <div id="texttest">
-        Marbles on a polished floor, impossible to gather.
-      </div>
-      <div id="texttest">
-        Scent of decay echoes forgotten arithmetic.
-      </div>
-      <div id="texttest">
-        The radio played a symphony of static.
+        {Drawing} - The Maps of Dusk<br>
+        - Nomograms, paper computers<br>
+        - The Sleepwalkers, cosmic cartographers<br>
+        - Monads, The Absolute <br>
+        - PostGeography<br>
+        - Seismographs and Pentagraphs<br>
+        - Against the Motion of Earth
       </div>
 
-      <br>
       <div id="texttest">
-        -
-      </div>
-      <br>
-
-      <div id="texttest">
-        Locked up in the pleasure piers like lepers in leprosariums.
-      </div>
-      <div id="texttest">
-        Rubber and tarmac.
-      </div>
-      <div id="texttest">
-        Bats stuck as dry leaves to runway concrete.
-      </div>
-      <div id="texttest">
-        Depicting the loa of roads and highways.
+        {Writing} - Timeaus<br>
+        The contriver and embellisher of elegant mysteries.<br>
+        The Inventor of pre-established harmony.<br>
+        - Bismarks Dismantled = The Razorblade Factory<br>
+        - The Library of Babel <br>
+        - Pataphysics, the science of imaginary solutions.<br>
+        - Against the Motion of Earth
       </div>
 
-      <br>
       <div id="texttest">
-        -
-      </div>
-      <br>
-
-      <div id="texttest">
-        Babies cried tears of motor oil, lubricating the armoured vehicles.
-      </div>
-      <div id="texttest">
-        I danced as marionettes on strings, limbs contorting into impossible shapes.
-      </div>
-      <div id="texttest">
-        A lullaby of code.
-      </div>
-      <div id="texttest">
-        Melding flesh and circuits in a strange embrace.
+        {Collage} - Surrender all function, but not the semantic or material meaning. These old disregarded materials distinctly relate to the social reality of their time. <br>
+        Palimpsest - Layering, A gateway to past memories.<br>
+        - Stratigraphy<br>
+        - Dendrochronology<br>
+        - Carbon Dating<br>
+        - Scriptio Inferior
       </div>
 
-      <br>
       <div id="texttest">
-        -
+        {Technology} - Our Atomic Consiousness<br>
+        - Memories from the Future<br>
+        - The Naked City<br>
+        - Post Trinity and The Voyager<br>
+        - Camera Obscura
       </div>
-      <br>
-
-      <div id="texttest">
-        Monument to our excesses.
-      </div>
-      <div id="texttest">
-        Image monoliths, their true purpose unknown.
-      </div>
-      <div id="texttest">
-        Buried urns and birthed graves.
-      </div>
-      <div id="texttest">
-        Barking at future moons, a futile gesture.
-      </div>
-
-      <br>
-      <div id="texttest">
-        -
-      </div>
-      <br>
-
-      <div id="texttest">
-        How did the bacteria come to see the petri dish differently than you do?
-      </div>
-      <div id="texttest">
-        The petri dish does not exhibit any sort of visual perception.
-      </div>
-      <div id="texttest">
-        The petri dish is simply the vessel of exposure.
-      </div>
-      <div id="texttest">
-        Nothing is at a different distance from the petri dish than it is from the bacteria.
-      </div>
-
-
-
-
-
-
 
 
 
@@ -144,138 +77,87 @@
     </div>
     <div id="column3">
       <div id="texttest">
-        <p>Concerted heads</p>
-        <p>The fluidity of graphite</p>
-        <p>Concerning interpretations</p>
-        <p>Interpassivity</p>
-        <p>Keep it awake</p>
-        <p>Scarifying</p>
-        <p>Cyberiad</p>
-        <p>Neon origami</p>
-        <p>Abandoned weapons range</p>
-        <p>Can't get you out of my head</p>
-        <p>Delicate shadings</p>
-        <p>Complete inertia</p>
-        <p>Zombie formalism</p>
-        <p>Krieg dem kriege</p>
-        <p>Sacrosanct</p>
-        <p>Abstinence in volition</p>
-        <p>The smell of archaic fuels</p>
-        <p>Violate your innocense</p>
-        <p>Screams ignite the oil sky</p>
-        <p>Petro chemical haze</p>
-        <p>Organ harvest festival</p>
-        <p>Undermine your privilege</p>
-        <p>The spectre of uselessness</p>
-        <p>The electronic janitors</p>
-        <p>Questioning the recognition</p>
-        <p>The century of the self</p>
-        <p>Body without organs</p>
-        <p>Illicit practice</p>
-        <p>Prinz vogelfrei</p>
-        <p>Locust eaters</p>
-        <p>Scabrous</p>
-        <p>Funnytown</p>
-        <p>The emperor moth</p>
-        <p>The shadow operators</p>
-        <p>Exit through the giftshop</p>
-        <p>Arrogance and naivity</p>
-        <p>Implosion of meaning</p>
-        <p>Irrevocably bourgeois</p>
-        <p>The glare of the gas flare</p>
-        <p>Black insect laughter</p>
-        <p>Teatro grottesco</p>
-        <p>The flaying men</p>
-        <p>The age of suspicion</p>
-        <p>Siliconobjects</p>
-        <p>Tortured postures</p>
-        <p>Esoteric procedure</p>
-        <p>Iron tooled sky</p>
-        <p>Harmful miasmas</p>
-        <p>Götterdämmerung</p>
-        <p>Hecatomb</p>
-        <p>Ennuchs</p>
-        <p>Memoranda</p>
-        <p>Physiognomy</p>
-        <p>The sythe of saturn</p>
-        <p>Undifferentiated tissue</p>
-        <p>The branded prison hulks</p>
-        <p>Stark isolated forays</p>
-        <p>Hail of crystal skulls</p>
-        <p>On a eerily pacified battleground</p>
-        <p>Spat and spread across the pavement</p>
-        <p>Aborted or deliberately abandoned</p>
-        <p>Idiosyncratic nightmares</p>
-        <p>Phlegm constructs</p>
-        <p>End of the pier</p>
-        <p>Formations of bombers</p>
-        <p>His bark is worse than his bite</p>
-        <p>Mythology of the clown</p>
-        <p>The works of mourning</p>
-        <p>Cynical exercises</p>
-        <p>The reality asylum</p
-        <p>Black bile</p>
-        <p>Cherem</p>
-        <p>Kadosh</p>
-        <p>Nadir</p>
-        <p>Homo sacred</p>
-        <p>The Spectacle</p>
-        <p>Fetishobjects</p>
-        <p>Diseased mania</p>
-        <p>Permissus avibus</p>
-        <p>Tank tracks untangled</p>
-        <p>Ballisticobjects</p>
-        <p>Fearful symmetry</p
-        <p>Planes without men</p>
-        <p>Radioactive rat race</p>
-        <p>Soot stained teeth</p>
-        <p>Humane restraints</p>
-        <p>Howling edifices</p>
-        <p>Specters of marx</p>
-        <p>The thyrsus staff</p>
-        <p>Labyrinthine</p>
-        <p>Paroxysm</p>
-        <p>Monads</p>
-        <p>Entelechy</p>
-        <p>Meatobjects</p>
-        <p>Shibboleth</p>
-        <p>Urn burial</p>
-        <p>Birthing graves</p>
-        <p>Hyperobjects</p>
-        <p>The Spectacle</p>
-        <p>Their might of excess</p>
-        <p>The lost cause of poetry</p>
-        <p>A soft voice whispers nothing</p>
-        <p>Dark starless venice</p>
-        <p>Boiled out eyes</p>
-        <p>Hyperreal nebula</p>
-        <p>A dog with no teeth</p>
-        <p>Spinal Catastrophism</p>
-        <p>Urban reflections</p>
-        <p>Requiem for the media</p>
-        <p>Werben, werben</p>
-        <p>Iconoplastic</p>
-        <p>The Factory war</p>
-        <p>Dragged into paradise</p>
-        <p>Kingdom of crooked mirrors</p>
-        <p>The rubbish of a possible carnival</p>
-        <p>The sparse furniture of the mind</p>
-        <p>Disordered by the weight of dreams</p>
-        <p>Ageless rituals of the cockroach world</p>
-        <p>The misery of imprisoned matter</p>
-        <p>Slowly fading, wilting before our eyes</p>
-        <p>Hypertrophied organs kept in formaldehyde</p>
-        <p>Twitched like a mass of hatched spiderlings</p>
-        <p>The terminal documents of the 21th century</p>
-        <p>The paramilitary imagery of the avant garde</p>
-        <p>Millions died in the mud flats</p>
-        <p>Bureaucrats of spectral departments</p>
-        <p>Consulting an invisible mirror</p>
-        <p>The cycle of non being</p>
-        <p>Ricochets across the crystal desert</p>
-        <p>Abandonment will be his salvation</p>
-        <p>Folded, spindled and mutilated</p>
+        <p>{Artists}</p>
+        <p><a href="https://shanedw.wixsite.com/shanedrinkwater" target="_blank">Shane Drinkwater</a>
+        <p>
+        <p><a href="https://louisreith.com/" target="_blank">Louis Reith</a>
+        <p>
+        <p><a href="https://www.hendrikvermeulen.be/" target="_blank">Hendrik Vermeulen</a>
+        <p>
+        <p><a href="https://www.robvoerman.nl/en/prints" target="_blank">Rob Voerman</a>
+        <p>
+        <p><a href="https://bitforms.art/exhibition/beryl-korot-a-coded-language/" target="_blank">Beryl Korot</a>
+        <p>
+        <p><a href="https://www.lost-painters.nl/phoebus-toon-van-borm-the-fields-12-notes-on-clarity/" target="_blank">Toon van Borm</a>
+        <p>
+        <p><a href="https://alexandraroozen.com/two-tone/" target="_blank">Alexandra Roozen</a>
+        <p>
+        <p><a href="https://www.annamariagelmi.com/drawings-collages/" target="_blank">Annamaria Gelmi</a>
+        <p>
+        <p><a href="https://www.fvanhiel.com/works" target="_blank">Frank van Hiel</a>
+        <p>
+        <p><a href="https://www.moma.org/artists/7986" target="_blank">Cedric Price</a>
+        <p>
+        <p><a href="https://anndecaestecker.com/?page=drawings" target="_blank">Ann Decaestecker</a>
+        <p>
+        <p><a href="https://www.moma.org/artists/2017" target="_blank">A.G.Fronzoni</a>
+        <p>
+        <p><a href="https://www.artnet.com/artists/hanne-darboven/" target="_blank">Hanne Darboven</a>
+        <p>
+        <p><a href="https://museo.kunstlokaalno8.nl/about-rob-vollewens/" target="_blank">Rob Vollewens</a>
+        <p>
+        <p><a href="http://www.wimnival.com/" target="_blank">Wim Nival</a>
+        <p>
+        <p><a href="http://jadrankanjegovan.nl/" target="_blank">Jadranka Njegovan</a>
+        <p>
+        <p><a href="https://joelroters.tumblr.com/" target="_blank">Joel Roters</a>
+        <p>
 
+      </div>
+
+      <div id="texttest">
+        <p>{Books}</p>
+        <p><a href="https://www.goodreads.com/book/show/30671.The_Sleepwalkers" target="_blank">The Sleepwalkers - Arthur Koestler</a>
+        <p>
+        <p><a href="https://www.goodreads.com/en/book/show/17717" target="_blank">Labyrinths - Jorge Luis Borges</a>
+        <p>
+        <p><a href="https://www.goodreads.com/book/show/2452401.Teatro_Grottesco" target="_blank">Teatro Grottesco - Thomas Ligotti</a>
+        <p>
+        <p><a href="https://www.goodreads.com/book/show/244261.The_Street_of_Crocodiles" target="_blank">The Street of Crocodiles - Bruno Schulz</a>
+        <p>
+        <p><a href="https://www.goodreads.com/book/show/249.Tropic_of_Cancer" target="_blank">Tropic of Cancer - Henry Miller</a>
+        <p>
+        <p><a href="https://www.goodreads.com/book/show/51933.Madness_and_Civilization" target="_blank">Madness and Civilisation - Michel Foucault</a>
+        <p>
+        <p><a href="https://www.goodreads.com/book/show/43713932-valis" target="_blank">VALIS - Philip K. Dick</a>
+        <p>
+        <p><a href="https://www.goodreads.com/book/show/52373.Regarding_the_Pain_of_Others" target="_blank">Regarding the Pain of Others - Susan Sontag</a>
+        <p>
+        <p><a href="https://www.goodreads.com/fa/book/show/8151.Laughter_in_the_Dark" target="_blank">Laughter in the Dark - Vladimir Nabokov</a>
+        <p>
+        <p><a href="https://www.goodreads.com/book/show/434903.The_Rings_of_Saturn" target="_blank">The Rings of Saturn - W.G. Sebald</a>
+        <p>
+        <p><a href="https://www.goodreads.com/pl/book/show/20863042-ghosts-of-my-life" target="_blank">Ghosts of My Life - Mark Fisher</a>
+        <p>
+        <p><a href="https://www.goodreads.com/book/show/70240.The_Atrocity_Exhibition" target="_blank">The Atrocity Exhibition - J.G. Ballard</a>
+        <p>
+      </div>
+
+
+      <div id="texttest">
+        <p>{Prompts}</p>
+        <p>Syzygy</p>
+        <p>Ziggurats</p>
+        <p>Architectural Nomograms</p>
+        <p>Axis Mvndi</p>
+        <p>Oppobrium</p>
+        <p>Cosmogony</p>
+        <p>Mercurochrome</p>
+        <p>Catatonia</p>
+        <p>Vicissitude</p>
+        <p>Ecclesiastical</p>
+        <p>Syntactical Customs</p>
+        <p>Tautology</p>
       </div>
     </div>
 
