--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <p>
         <p><a href="https://www.goodreads.com/book/show/52373.Regarding_the_Pain_of_Others" target="_blank">Regarding the Pain of Others - Susan Sontag</a>
         <p>
-        <p><a href="https://www.goodreads.com/fa/book/show/8151.Laughter_in_the_Dark" target="_blank">Laughter in the Dark - Vladimir Nabokov</a>
+        <p><a href="https://www.goodreads.com/book/show/2474084.The_Work_of_Art_in_the_Age_of_Its_Technological_Reproducibility_and_Other_Writings_on_Media" target="_blank">The Work of Art in the Age of Its Technological Reproducibility - Walter Benjamin</a>
         <p>
         <p><a href="https://www.goodreads.com/book/show/434903.The_Rings_of_Saturn" target="_blank">The Rings of Saturn - W.G. Sebald</a>
         <p>
