--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <div id="header">
     <div id="headercontent">
-      <p>Tom Allsop</p><br><br><br><br><br>
+      <p>Tomas vos Allsop</p><br><br><br><br><br>
       <body>
         <div class="container">
           <div id="layer-1" class="welcome layer">
@@ -849,3 +849,4 @@
 </body>
 
 </html>
+
