--- a/index.html
+++ b/index.html
@@ -6,18 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="shortcut icon" href="images/orb.jpg" />
-  <meta name="description" content="Tom Allsop's digital objects.">
+  <meta name="description" content="Tom Allsop art website.">
   <meta name="keywords" content="Tom Allsop, tom allsop, tomasallsop">
   <meta name="author" content="Tom Allsop">
   <title>Tom Allsop</title>
 </head>
 
-<body>
+<body BGCOLOR="#E6E6E6">
 
   <div id="header">
     <div id="headercontent">
-      <p>Tomas vos Allsop</p><br><br><br><br><br>
+      <p>Tom Allsop</p><br><br><br><br><br>
       <body>
         <div class="container">
           <div id="layer-1" class="welcome layer">
@@ -822,31 +821,7 @@
     </div>
   </div>
 
-  <script>
-    function animateTitle() {
-      i >= message.length - 1 ? (i = 0) : i++,
-        (document.title = message[i]),
-        setTimeout("animateTitle()", 200);
-    }
-    var message = [
-        "█omasallsop",
-        "t█masallsop",
-        "to█asallsop",
-        "tom█sallsop",
-        "toma█allsop",
-        "tomas█llsop",
-        "tomasa█lsop",
-        "tomasal█sop",
-        "tomasall█op",
-        "tomasalls█p",
-        "tomasallso█",
-        "tomasallsop",
-      ],
-      i = 0;
-    animateTitle();
-  </script>
 
 </body>
 
 </html>
-
