--- a/pages/listdescriptions.html
+++ b/pages/listdescriptions.html
@@ -20,48 +20,48 @@ background: radial-gradient(circle,rgba(255, 255, 255, 1) 0%, rgba(230, 230, 230
 <body>
   <h1><a href="../index.html">Tom Allsop</a> - list of works</h1>
 
-  <a href="../works/cmyk3 1.png"><img align="right" src="../works/cmyk3 1.png" alt="Deep Woods Triangle (1)" hspace=5 vspace=5 width="200" height=""></a>
-  <h2><a name="Deep Woods Triangle (1)" href="../works/cmyk3 1.png">Deep Woods Triangle (1)</a></h2>
+  <a href="../works/cmyk3 1.jpg"><img align="right" src="../works/cmyk3 1.jpg" alt="Deep Woods Triangle (1)" hspace=5 vspace=5 width="200" height=""></a>
+  <h2><a name="Deep Woods Triangle (1)" href="../works/cmyk3 1.jpg">Deep Woods Triangle (1)</a></h2>
   date: 2025.
   dimensions: 21x29 cm.
   type: drawing.
   <p>ruling pen loaded with printer ink, paper depicting sketches.
   <br clear="all">
 
-  <a href="../works/cmyk2 1.png"><img align="right" src="../works/cmyk2 1.png" alt="Deep Woods Triangle (2)" hspace=5 vspace=5 width="200" height=""></a>
-  <h2><a name="Deep Woods Triangle (2)" href="../works/cmyk2 1.png">Deep Woods Triangle (2)</a></h2>
+  <a href="../works/cmyk2 1.jpg"><img align="right" src="../works/cmyk2 1.jpg" alt="Deep Woods Triangle (2)" hspace=5 vspace=5 width="200" height=""></a>
+  <h2><a name="Deep Woods Triangle (2)" href="../works/cmyk2 1.jpg">Deep Woods Triangle (2)</a></h2>
   date: 2025.
   dimensions: 24x28 cm.
   type: drawing.
   <p>cyan and yellow dot patterns, ruling pen loaded with printer ink, continuous feed computer paper.
   <br clear="all">
 
-  <a href="../works/cmyk1 1.png"><img align="right" src="../works/cmyk1 1.png" alt="Deep Woods Triangle (3)" hspace=5 vspace=5 width="200" height=""></a>
-  <h2><a name="Deep Woods Triangle (3)" href="../works/cmyk1 1.png">Deep Woods Triangle (3)</a></h2>
+  <a href="../works/cmyk1 1.jpg"><img align="right" src="../works/cmyk1 1.jpg" alt="Deep Woods Triangle (3)" hspace=5 vspace=5 width="200" height=""></a>
+  <h2><a name="Deep Woods Triangle (3)" href="../works/cmyk1 1.jpg">Deep Woods Triangle (3)</a></h2>
   date: 2025.
   dimensions: 24x28 cm.
   type: drawing.
   <p>magenta and black dot patterns, ruling pen loaded with printer ink, continuous feed computer paper.
   <br clear="all">
 
-  <a href="../works/radardish1.png"><img align="right" src="../works/radardish1.png" alt="Fiducial Marker I" hspace=5 vspace=5 width="200" height=""></a>
-  <h2><a name="Fiducial Marker I" href="../works/radardish1.png">Fiducial Marker I</a></h2>
+  <a href="../works/radardish1.jpg"><img align="right" src="../works/radardish1.jpg" alt="Fiducial Marker I" hspace=5 vspace=5 width="200" height=""></a>
+  <h2><a name="Fiducial Marker I" href="../works/radardish1.jpg">Fiducial Marker I</a></h2>
   date: 2025.
   dimensions: 23x29 cm.
   type: drawing.
   <p>mechanical pencil, paper depicting graphs.
   <br clear="all">
 
-  <a href="../works/radardish2.png"><img align="right" src="../works/radardish2.png" alt="Fiducial Marker II" hspace=5 vspace=5 width="200" height=""></a>
-  <h2><a name="Fiducial Marker II" href="../works/radardish2.png">Fiducial Marker II</a></h2>
+  <a href="../works/radardish2.jpg"><img align="right" src="../works/radardish2.jpg" alt="Fiducial Marker II" hspace=5 vspace=5 width="200" height=""></a>
+  <h2><a name="Fiducial Marker II" href="../works/radardish2.jpg">Fiducial Marker II</a></h2>
   date: 2025.
   dimensions: 21x29 cm.
   type: drawing.
   <p>mechanical pencil, paper depicting sketches.
   <br clear="all">
 
-  <a href="../works/radardish3.png"><img align="right" src="../works/radardish3.png" alt="Fiducial Marker III" hspace=5 vspace=5 width="200" height=""></a>
-  <h2><a name="Fiducial Marker III" href="../works/radardish3.png">Fiducial Marker III</a></h2>
+  <a href="../works/radardish3.jpg"><img align="right" src="../works/radardish3.jpg" alt="Fiducial Marker III" hspace=5 vspace=5 width="200" height=""></a>
+  <h2><a name="Fiducial Marker III" href="../works/radardish3.jpg">Fiducial Marker III</a></h2>
   date: 2025.
   dimensions: 21x29 cm.
   type: perforations.
