--- a/pages/listimage.html
+++ b/pages/listimage.html
@@ -21,24 +21,24 @@ background: radial-gradient(circle,rgba(255, 255, 255, 1) 0%, rgba(230, 230, 230
 
   <table border="0" cellpadding="20" width="100%">
 
-  <tr><td><center><a name="Deep Woods Triangle (1)" href="../works/cmyk3 1.png"><img src="../works/cmyk3 1.png" alt="cmyk3 1.png" hspace=5 vspace=5 width="200" height=""></a><br clear="all">
-  <a href="../works/cmyk3 1.png">Deep Woods Triangle (1)</a></center>
+  <tr><td><center><a name="Deep Woods Triangle (1)" href="../works/cmyk3 1.jpg"><img src="../works/cmyk3 1.jpg" alt="cmyk3 1.jpg" hspace=5 vspace=5 width="200" height=""></a><br clear="all">
+  <a href="../works/cmyk3 1.jpg">Deep Woods Triangle (1)</a></center>
   </td>
-  <td><center><a name="Deep Woods Triangle (2)" href="../works/cmyk2 1.png"><img src="../works/cmyk2 1.png" alt="cmyk2 1.png" hspace=5 vspace=5 width="200" height=""></a><br clear="all">
-  <a href="../works/cmyk2 1.png">Deep Woods Triangle (2)</a></center>
+  <td><center><a name="Deep Woods Triangle (2)" href="../works/cmyk2 1.jpg"><img src="../works/cmyk2 1.jpg" alt="cmyk2 1.jpg" hspace=5 vspace=5 width="200" height=""></a><br clear="all">
+  <a href="../works/cmyk2 1.jpg">Deep Woods Triangle (2)</a></center>
   </td>
-  <td><center><a name="Deep Woods Triangle (3)" href="../works/cmyk1 1.png"><img src="../works/cmyk1 1.png" alt="cmyk1 1.png" hspace=5 vspace=5 width="200" height=""></a><br clear="all">
-  <a href="../works/cmyk1 1.png">Deep Woods Triangle (3)</a></center>
+  <td><center><a name="Deep Woods Triangle (3)" href="../works/cmyk1 1.jpg"><img src="../works/cmyk1 1.jpg" alt="cmyk1 1.jpg" hspace=5 vspace=5 width="200" height=""></a><br clear="all">
+  <a href="../works/cmyk1 1.jpg">Deep Woods Triangle (3)</a></center>
   </td></tr>
 
-  <tr><td><center><a name="Deep Woods Triangle (1)" href="../works/radardish1.png"><img src="../works/radardish1.png" alt="cmyk3 1.png" hspace=5 vspace=5 width="200" height=""></a><br clear="all">
-  <a href="../works/radardish1.png">Fiducial Marker I</a></center>
+  <tr><td><center><a name="Deep Woods Triangle (1)" href="../works/radardish1.jpg"><img src="../works/radardish1.jpg" alt="cmyk3 1.jpg" hspace=5 vspace=5 width="200" height=""></a><br clear="all">
+  <a href="../works/radardish1.jpg">Fiducial Marker I</a></center>
   </td>
-  <td><center><a name="Deep Woods Triangle (2)" href="../works/radardish2.png"><img src="../works/radardish2.png" alt="cmyk2 1.png" hspace=5 vspace=5 width="200" height=""></a><br clear="all">
+  <td><center><a name="Deep Woods Triangle (2)" href="../works/radardish2.jpg"><img src="../works/radardish2.jpg" alt="cmyk2 1.jpg" hspace=5 vspace=5 width="200" height=""></a><br clear="all">
   <a href="../works/radardish2.png">Fiducial Marker II</a></center>
   </td>
-  <td><center><a name="Deep Woods Triangle (3)" href="../works/radardish3.png"><img src="../works/radardish3.png" alt="cmyk1 1.png" hspace=5 vspace=5 width="200" height=""></a><br clear="all">
-  <a href="../works/radardish3.png">Fiducial Marker III</a></center>
+  <td><center><a name="Deep Woods Triangle (3)" href="../works/radardish3.jpg"><img src="../works/radardish3.jpg" alt="cmyk1 1.jpg" hspace=5 vspace=5 width="200" height=""></a><br clear="all">
+  <a href="../works/radardish3.jpg">Fiducial Marker III</a></center>
   </td></tr>
 
 
